# embedding-server

./: Dockerfile  pyproject.toml
app/: load_transformers.py  main.py
